# se05x-pkcs11

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  README.md  SCR.txt
scripts/: .gitignore  pkcs11_derive_key.py  pkcs11_ecc_key_gen.py  pkcs11_ecc_sign_verify.py  pkcs11_encrypt_decrypt.py  pkcs11_hmac_sign_verify.py  pkcs11_import_object.py  pkcs11_message_digest.py  pkcs11_module_info.py  pkcs11_random_gen.py  pkcs11_rsa_key_gen.py  pkcs11_rsa_sign_verify.py  pkcs11_sym_key_gen.py  pkcs11_utils.py
scripts/input_data/: data1024.txt  data2048.txt  data600.txt
scripts/keys/: ec_prime192_priv.pem  ec_prime192_pub.pem  ec_prime256_priv.pem  ec_prime256_pub.pem  rsa1024_private.pem  rsa1024_public.pem  rsa_priv_1024.pem  rsa_priv_2048.pem  rsa_priv_3072.pem  rsa_priv_4096.pem  rsa_pub_1024.pem  rsa_pub_2048.pem  rsa_pub_3072.pem  rsa_pub_4096.pem  secr_key_16.key  secr_key_32.key  secr_key_40.key
se_pkcs11/: cryptoki.h  sss_pkcs11_pal.h  sss_pkcs11_pal_asymm.c  sss_pkcs11_pal_core.c  sss_pkcs11_pal_helpers.c  sss_pkcs11_pal_object.c  sss_pkcs11_pal_symm.c  sss_pkcs11_utils.c  sss_pkcs11_utils.h
